--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.2",
         "spatie/laravel-activitylog": "^4.7",
+        "spatie/laravel-medialibrary": "^10.11",
         "yajra/laravel-datatables": "^10.0"
     },
     "require-dev": {
